--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "utils"]
 	path = utils
-	url = https://github.com/EmbedJournal/c-utils.git
+	url = https://github.com/GoToMain/c-utils.git
